--- a/assets/package.json
+++ b/assets/package.json
@@ -7,11 +7,15 @@
     "watch": "webpack --mode development --watch"
   },
   "dependencies": {
+    "graphql": "^15.4.0",
+    "graphql-request": "^3.3.0",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "regenerator-runtime": "^0.13.7"
+    "recoil": "^0.1.2",
+    "regenerator-runtime": "^0.13.7",
+    "urql": "^1.11.2"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
